--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h2>i am done the job</h2>
     <h3>wow</h3>
     <h2>This is the second test</h2>
+    <img src="pic.png" alt="">
+    
 </body>
 </html>
