--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h2>i am done the job</h2>
     <h3>wow</h3>
     <h2>This is the second test</h2>
+    <p>checking the second branch</p>
     <img src="pic.png" alt="">
     
 </body>
