--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h3>wow</h3>
     <h2>This is the second test</h2>
     <p>checking the second branch</p>
+    <p>checking the branch code second time</p>
     <img src="pic.png" alt="">
     
 </body>
